--- a/src/global.css
+++ b/src/global.css
@@ -18,6 +18,28 @@
 	}
 }
 
+/* body {
+  padding: 12px;
+} */
+
+.bet-error {
+  transform: scale(0);
+}
+
+.bet-error-visible {
+  animation: scale-up ease-in-out 0.2s;
+  transform: scale(1);
+}
+
+@keyframes scale-up {
+	0% {
+		transform: scale(0);
+	}
+	100% {
+		transform: scale(1);
+	}
+}
+
 #dice-wrapper {
-  pointer-events: none;
+	pointer-events: none;
 }
